--- a/issue/templates/issues.html
+++ b/issue/templates/issues.html
@@ -2,25 +2,16 @@
 
 {% block content %}
 <div class="row row-flex">
-    {% for issue in issuess %}
+    {% for issue in issues %}
     <div class="col-xs-10 col-xs-offset-1 col-sm-offset-0 col-sm-6 col-md-4 display panel panel-default">
         <div class="panel-body">
             <div class="issue"></div>
             <h3>{{ issue.title }}</h3>
-            <p class="issue_description">{{ issue_description }}</p>
-            <p>{{ issue.date }}</p>
-            <p>{{ issue.user }}</p>
+            <p class="issue_description">Description:{{ issue_description }}</p>
+            <p>Date: {{ issue.date_created }}</p>
+            <p>User: {{ issue.user }}</p>
             
-            
-            <!--<form method="POST" action="{% url 'add_to_cart' product.id %}">
-                {% csrf_token %}
-                <div class="input-group">
-                    <input name="quantity" type="number" min="1" max="999" class="form-control" placeholder="Quantity">
-                    <span class="input-group-btn">
-                        <button class="btn btn-succcess" type="submit">Add</button>
-                    </span>
-                </div>
-            </form>-->
+
         </div>
     </div>
     {% endfor %}
