--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,8 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,700');
 
-body {
-    font-family: 'Montserrat', sans-serif !important;
-    font-size: .9rem !important;
+
+body,html {
+    font-family: 'Montserrat', sans-serif;
+    font-size: .9rem;
 }
 
 footer {
@@ -13,6 +14,12 @@ footer {
     color: #A9A9A9;
 }
 
+.page-title {
+    font-size: 1.3rem;
+    margin-top: 40px;
+    font-weight: 500;
+    margin-bottom: 55px;
+}
 .icon-bar {
     background-color: #fff;
 }
@@ -33,5 +40,29 @@ footer {
 }
 
 .nav-link {
+    color: #ffffff;
+}
+
+/*/ Issues.html /*/
+
+.issue-card {
+    margin-top: 20px;
+}
+
+#issue-title {
+    font-size: 1rem;
+    text-decoration: none;
+    color: #0D1DB8;
+} 
+
+#btn-read-more {
+    background-color: #0D1DB8;
+    border-radius: 0;
+    border-color: #0D1DB8;
+    margin-left: 25px;
+    color: #F3E5E5;
+}
+
+.btn-read-more:hover {
     color: #ffffff;
 }
