--- a/issue/templates/issues.html
+++ b/issue/templates/issues.html
@@ -10,7 +10,7 @@
     <div class="card-header" id="headingOne{{ forloop.counter }}">
         <h5 class="mb-0">
                 <button class="btn btn-link" id="issue-title" type="button" data-toggle="collapse" data-target="#collapseOne{{ forloop.counter }}" aria-expanded="false" aria-controls="collapseOne{{ forloop.counter }}">
-                {{ issue.title }}
+                {{ issue.name}}
                 </button>
             </h5>
         </div>
