--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -43,7 +43,7 @@ footer {
     color: #ffffff;
 }
 
-/*/ Issues.html /*/
+/*/ issues.html and myissues.html/*/
 
 .issue-card {
     margin-top: 20px;
@@ -65,6 +65,16 @@ footer {
 
 .btn-read-more:hover {
     color: #ffffff;
+}
+
+
+.btn-edit {
+    margin-left: 20px;
+    border: none;
+    color: #F3E5E5;
+    background-color: #0D1DB8;
+    padding: 6.5px 11px;
+    
 }
 
 /*/ Detail.html /*/
@@ -121,10 +131,10 @@ footer {
     text-transform: uppercase;
     font-size: .9rem;
     color: #fff;
+    margin-left: 5px;
 }
 
 #upvote {
-    width: 38%;
     margin-top: 10px;
 }
 
@@ -132,7 +142,6 @@ footer {
     width: 38%;
     margin-top: 10px;
 }
-
 
 
 
