--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -143,6 +143,13 @@ footer {
     margin-top: 10px;
 }
 
+.comments-panel {
+    position: absolute;
+    width: 326px;
+    padding-top: 50px;
+    background: #F7F7F7;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
 
 
 /*/ cart.html /*/
