added checkout page link

--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -60,7 +60,7 @@
         	
         	<td class="text-right last"> 
         		<button type="submit" class="btn btn-add">Add</button>
-        		<a href="#" class="btn btn-success" role="button">Checkout</a>
+        		<a href="{% url 'checkout' %}" class="btn btn-success" role="button">Checkout</a>
     	    </td>
         </tr>
         </tbody>
