--- a/issue/templates/issues.html
+++ b/issue/templates/issues.html
@@ -18,7 +18,7 @@
         <div class="card-body">
             <ul class="list-group list-group-flush">
                 <li class="list-group-item">Description: {{ issue.description }}</li>
-                <li class="list-group-item">Date created: {{ issue.date_created }}</li>
+                <li class="list-group-item">Created at: {{ issue.created_at }}</li>
                 <li class="list-group-item">Created by: {{ issue.created_by }}</li>
         </div>
       <a href="{% url 'get_detail' issue.id %}" class="btn w-25" id="btn-read-more">Read more</a>
