--- a/issue/templates/issueform.html
+++ b/issue/templates/issueform.html
@@ -2,7 +2,7 @@
 {% load bootstrap_tags %}
 {% block content %}
 
-<h2>New Issue</h2>
+<h2 class="page-title">New Issue</h2>
 
 <form method='POST' action="">
     {% csrf_token %}
