--- a/issue/templates/myissues.html
+++ b/issue/templates/myissues.html
@@ -2,8 +2,12 @@
 
 {% block content %}
 
+<div class="row">
+    <div class="col-lg-12">
 <h1 class="page-title">My Issues</h1>
-
+<a href="{% url 'new_issue' %}" class="btn btn-primary">Add</a>
+</div>
+</div>
     {% for issue in issues %}
 
 <div class="accordion issue-card" id="accordionExample">
@@ -22,10 +26,17 @@
                 <li class="list-group-item">Created by: {{ issue.created_by }}</li>
                 <li class="list-group-item">Created at: {{ issue.created_at }}</li>
         </div>
+    .
         <div class="row">
-          <a href="{% url 'get_detail' issue.id %}" class="btn w-25" id="btn-read-more">Read more</a>
-          <form method="GET" action="edit/{{ issue.id }}"><input type="submit" value="Edit" class="btn-edit"></form>
-          <a href="{% url 'delete_issue' issue.id %}" class="btn" id="comment-btn">Delete</a>
+            <div class="btn-group mr-2" role="group" aria-label="First group" style= "margin-left: 41px;">
+          <a href="{% url 'get_detail' issue.id %}" class="btn btn-outline-secondary">Details</a>
+              </div>
+              <div class="btn-group mr-2" role="group" aria-label="Second group">
+          <form method="GET" action="edit/{{ issue.id }}"><input type="submit" value="Edit" class="btn btn-outline-primary"></form>
+          </div>
+          <div class="btn-group" role="group" aria-label="Third group">
+          <a href="{% url 'delete_issue' issue.id %}" class="btn btn-outline-danger">Delete</a>
+          </div>
         </div>
     </div>
     </div>
